--- a/emotion-recognition/.project
+++ b/emotion-recognition/.project
@@ -20,4 +20,24 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1434917995573</id>
+			<name></name>
+			<type>22</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.jpg</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1434917995607</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-true-false-image*</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
